# py-resourcecode

./: .buildinfo  .gitignore  .gitlab-ci-ifremer.yml  .gitlab-ci.yml  .hgtags  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  doc_client.html  doc_data.html  doc_installation.html  doc_nataf.html  doc_opsplanning_resassess.html  doc_produciple_assessment.html  doc_spectrum.html  doc_weatherwindow.html  genindex.html  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  readme.md  search.html  searchindex.js  setup.py  sg_execution_times.html  tox.ini
.doctrees/: doc_client.doctree  doc_data.doctree  doc_installation.doctree  doc_nataf.doctree  doc_opsplanning_resassess.doctree  doc_produciple_assessment.doctree  doc_spectrum.doctree  doc_weatherwindow.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree  plot_0_Database_exploration.doctree  plot_1_data_extraction.doctree  plot_2_Multivariate_Extremes.doctree  plot_3_Operation_Planning.doctree  plot_4_Producible.doctree  sg_execution_times.doctree
.doctrees/opsplanning_resassess/: opsplanning.doctree  resassess.doctree
.github/workflows/: check.yml  documentation.yml  publish-to-pypi.yml
_downloads/677b8a8510c92263e79b624b46a6a547/: plot_1_data_extraction.ipynb
_downloads/6e1a33693b0969e1abd5f74b47e55466/: plot_2_Multivariate_Extremes.ipynb
_downloads/718db51b25bcf460f041b585688181fe/: plot_4_Producible.ipynb
_downloads/769457c2e9017b36ba0788d5b485de85/: plot_2_Multivariate_Extremes.py
_downloads/7bb097422775ab92addb8ce7ee040d77/: plot_0_Database_exploration.ipynb
_downloads/ccff97968e50cb6ba53cf3bd367b567a/: plot_1_data_extraction.py
_downloads/e4d7ad987f1d4bd7f585c4dfc5cc39cc/: plot_3_Operation_Planning.py
_downloads/ee4df266f2263dde7f2553136f62cbb2/: plot_3_Operation_Planning.ipynb
_downloads/f64a1289b821906ef3cdabf2f65e6f9a/: plot_0_Database_exploration.py
_sources/: doc_client.rst  doc_installation.rst  doc_opsplanning_resassess.rst  doc_spectrum.rst  doc_weatherwindow.rst  index.rst  sg_execution_times.rst
_sources/auto_examples/: index.rst  plot_0_Database_exploration.rst  plot_1_data_extraction.rst  plot_2_Multivariate_Extremes.rst  plot_3_Operation_Planning.rst  plot_4_Producible.rst  sg_execution_times.rst
_sources/opsplanning_resassess/: opsplanning.rst  resassess.rst
_static/: documentation_options.js
auto_examples/: index.html  plot_0_Database_exploration.html  plot_1_data_extraction.html  plot_2_Multivariate_Extremes.html  plot_3_Operation_Planning.html  plot_4_Producible.html  sg_execution_times.html
codes_to_migrate/matlab_codes/: W_Window_RSCD.m  hsref.mat  test.mat
codes_to_migrate/r_codes/: CensGaussfit.R  Test_Nataf.R  huseby.R  nataf_data.csv  nataf_sim.R  oversampling.R  qgpd.R  readme.md
config/: config.ini
doc/: conf.py  doc_client.rst  doc_data.rst  doc_installation.rst  doc_nataf.rst  doc_opsplanning_resassess.rst  doc_produciple_assessment.rst  doc_spectrum.rst  index.rst  sg_execution_times.rst
examples/: README.rst  plot_0_Database_exploration.py  plot_1_data_extraction.py  plot_2_Multivariate_Extremes.py  plot_3_Operation_Planning.py  plot_4_Producible.py  plot_Multivariate_Extremes.py  plot_Operation_Planning.py  plot_Producible.py
joss_paper/: paper.bib  paper.md
notebooks/: innosea.ipynb  nataf.ipynb  opsplanning.ipynb  weather_window.ipynb
opsplanning_resassess/: opsplanning.html  resassess.html
resourcecode/: __init__.py  __version__.py  client.py  exceptions.py  huseby.py  io.py  nataf.py  plotly_theme.py  utils.py
resourcecode/data/: __init__.py  coastline.feather  grid_SPEC.feather  islands.feather  netcfd_description.json  variables.feather
resourcecode/eva/: __init__.py  censgaussfit.py  extrema.py  huseby.py  simulation.py
resourcecode/innosea/: Resource_main.py  __init__.py  main.py
resourcecode/innosea/Inputs/: Frequencies.csv  HsTptimeseries.xlsx  capture_width.csv
resourcecode/innosea/test_spectrum/: spectra1D_timeseries_GBI.mat  time_series_GBI.csv
resourcecode/multivariate_extremes/nataf/: __init__.py  extrema.py  huseby.py  simulation.py
resourcecode/nataf/: __init__.py  cengaussfit.py  censgaussfit.py  extrema.py  huseby.py  simulation.py
resourcecode/opsplanning/: __init__.py
resourcecode/producible_assesment/: __init__.py
resourcecode/producible_assesment/Inputs/: PTO_values.csv
resourcecode/producible_assessment/: __init__.py  main.py
resourcecode/producible_assessment/Inputs/: HsTptimeseries.csv
resourcecode/resassess/: __init__.py
resourcecode/spectrum/: __init__.py  compute_parameters.py  convert2D1D.py  dispersion.py  download_data.py  jonswap.py  plots.py
resourcecode/weatherwindow/: __init__.py  weatherwindow.py
tests/: __init__.py  conftest.py  test_basic.py  test_client.py  test_data.py  test_eva.py  test_innosea.py  test_nataf.py  test_netfcd.py  test_opsplanning.py  test_producible_assesment.py  test_producible_assessment.py  test_resassess.py  test_spectrum.py  test_utils.py  test_weather_window.py
tests/data/: timeseries_fp.json  timeseries_hs.json  timeseries_uust.json
tests/data/censgaussfit/: input_0.csv  output_0.csv
tests/data/huseby/: input_0.csv  output_0.csv  output_1.csv
tests/data/opsplanning/: input.csv
tests/data/resassess/: df_average_energy.csv  df_nubmer_occurence.csv  df_percentage_occurence.csv  df_standard_deviation_energy.csv  input.csv  monthly_stat.csv  yearly_stat.csv
tests/data/spectrum/: Etfh.csv  RSCD_WW3-RSCD-UG-W001933N55743_201605_freq.nc  W001933N55743_201605.nc  depth.csv  dir.csv  freq.csv  parameters_1D.csv  parameters_2D.csv  spec.csv
tests/data/weather_window/: hs.csv
